# generative-ai-chatbot

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.envs/: .env
chatgpt_frontend/public/: index.html
chatgpt_frontend/src/: App.css  App.js  AuthContext.js  AuthProvider.js  DropdownMenu.js  HomePage.js  Login.js  Profile.js  Register.js  axiosInstance.js  useAxios.js
chatgpt_frontend/src/components/: ChatHistory.js  ChatTemplates.js  ChatUI.js
docker/: backend.Dockerfile  entrypoint.sh  frontend.Dockerfile  nginx.conf
frontend/: .env  package-lock.json  package.json
frontend/nginx/: default_nginx.conf  nginx.conf
frontend/public/: index.html  manifest.json
frontend/src/: ApiManagement.js  App.css  App.js  AuthContext.js  AuthErrorDisplay.js  DropdownMenu.js  HomePage.js  Login.js  Modal.js  Profile.js  Register.js  Rules.js  VoiceRecorder.js  axiosInstance.js  config.js  modelOptions.js
frontend/src/components/: ChatHistory.js  ChatInput.js  ChatTemplates.js  ChatUI.js  Message.js  PlatformSwitcher.js
src/: manage.py  migrate_run_server.sh
src/apis/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/apis/migrations/: 0001_initial.py  0002_instructionfile.py
src/app/llm/: factory.py  providers.py
src/audios/: serializers.py  services.py  urls.py  views.py
src/chat/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
src/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/web_aplication/: asgi.py  settings.py  urls.py  wsgi.py
(+13 files in other folders)
